[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "unchecked-io"
# Dynamic versioning allows maturin to read version from Cargo.toml
dynamic = ["version"]
description = "The world's fastest, most dangerous PostgreSQL-to-Arrow loader."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSL-1.1"}
authors = [{name = "Billthemaker"}]
keywords = ["rust", "postgresql", "arrow", "etl", "fast", "copy", "database"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "arro3-core>=0.1.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]